# iets-speed-control

./: .aiignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  build.cmd  pyproject.toml  run.cmd
docs/: ESP32_Tasmota.md
iets_speed_control/entities/: dimmer.py  serial_device.py
iets_speed_control/entrypoints/: cli.py  gui.pyw
iets_speed_control/util/: env.py  sensors.py
source/: __init__.py  __main__.py  gui.py  gui_tk.py
source/entities/: dimmer.py  serial_device.py  serial_device_async.py
source/entrypoints/: cli.py  gui.py  gui.pyw
source/util/: env.py  logger.py  sensors.py  tools.py
src/iets_speed_control/: __init__.py  controller.py
src/iets_speed_control/entities/: dimmer.py  serial_device.py
src/iets_speed_control/entrypoints/: cli.py  gui.pyw
src/iets_speed_control/util/: env.py  logger.py  sensors.py  tools.py
