[project]
name = "iets-speed-control"
version = "0"
description = "Fan Speed Control for 12V IETS Laptop Cooler Stands"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aioserial>=1.3.1",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "wmi>=1.5.1",
    "pystray>=0.19.5",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit-uv",
    "pyinstaller",
    "ruff",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[project.scripts]
iets-speed-control = "iets_speed_control.entrypoints.cli:cli"

[project.gui-scripts]
iets-speed-control-gui = "iets_speed_control.entrypoints.gui:gui"
